# warplink

./: Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-3fab2471361bae434dcda53d08ed07f6cb89b9c4bf4bbf7cac71e3c7ee827932.json  query-d69c031663447ddee64dd8abb7ef2b79eefd77222c4b56d9c517954339c734e5.json
migrations/: 20230813090926_init.sql  20230813173941_short_link_index.sql
pages/: index.html
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
static/: style.css
