[package]
name = "warplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.30.0", features = ["full"] }
url = "2.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono"]}
thiserror = "1.0.44"
rand = "0.8.5"